fix(mobile): Recenter pencil icon
On the edit button in the mobile view, the pencil icon has been
off-center for a little while. To prevent that from happening again, we
can can center it using flex rather than providing a fixed margin and
position

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -403,6 +403,8 @@ body {
 }
 
 #mobile-edit-button {
+	justify-content: center;
+	align-items: center;
 	position: absolute;
 	width: 56px;
 	height: 56px;
@@ -422,9 +424,6 @@ body {
 }
 
 #mobile-edit-button-image {
-	position: relative;
-	margin-inline-start: 16px;
-	top: 16px;
 	width: var(--btn-size);
 	height: var(--btn-size);
 	background: url('images/baseline-edit-24px.svg') no-repeat center !important;
